--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                     <ul class="mt-4 mb-5 mb-lg-0 profile-list list-unstyled">
                         <li><strong>Full Name :</strong> Pasindu Hasaranga </li>
 
-                        <li><strong>Website :</strong> https://voidwalker1999.github.io/</li>
+                        <li><strong>Website :</strong> <a href="https://voidwalker1999.github.io/">voidwalker1999.github.io</a> </li>
 
                         <li><strong>Email :</strong> v.g.pasinduhasaranga@gmail.com</li>
                     </ul>
